pushing to production because I'm having an issue with cumulative layout shift

--- a/css/main.css
+++ b/css/main.css
@@ -345,6 +345,7 @@ img {
 }
 
 #about-js {
+  background: #000;
   width: 100%;
   height: 100%;
   z-index: 1;
@@ -527,7 +528,7 @@ img {
   top: 0;
   left: 0;
   width: 100%;
-  height: auto;
+  height: 100%;
   line-height: 0;
 }
 .item-text {
